--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>catcherxuefeng</h1>
+<!-- HTML -->
+<div class="simple-spinner"></div>
+
+
+/* CSS */
+.simple-spinner {
+  height: 48px;
+  width: 48px;
+  border: 5px solid rgba(150, 150, 150, 0.2);
+  border-radius: 50%;
+  border-top-color: rgb(150, 150, 150);
+  animation: rotate 1s 0s infinite ease-in-out alternate;
+}
+@keyframes rotate {
+  0%   { transform: rotate(0);      }
+  100% { transform: rotate(360deg); }
+}
+
+
